all routes for restaurant now working
